changed 404 img, added input enter button search

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <div class="container">
         <div class="error-message">
           <img class="error-message__img" src="img/404.png" alt="Not found" />
+          <div class="error-message__text">404 Page not found</div>
         </div>
         <div class="characters"></div>
         <div class="characters__button">
